--- a/views/assignCourse.ejs
+++ b/views/assignCourse.ejs
@@ -5,70 +5,106 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/table.css" />
+    <title>Assign Instructors</title>
 </head>
 
 <body>
-    <form action="/assignCourse" method="post">
-        <h3>Step - 2</h3>
-        <hr>
-        <h4>
-            <%= populatedSemester.name %>
-        </h4>
+    <%- include('adminNavbar') %>
+        <!-- main body section -->
+        <div class="header">
+            <h2>Add Semester</h2>
+        </div>
+        <div class="sub-header">
+            <h5>
+                Step - 2
+            </h5>
             <br>
+            <h5>
+                <%= populatedSemester.name %>
+            </h5>
+        </div>
+        <form action="/assignCourse" method="post">
 
             <% for (var i=0; i <populatedSemester.programsOffered.length; i++) { %>
-                <h3>
-                    <%= i+1 %> <%= populatedSemester.programsOffered[i].degreeOffered.name %> <%= populatedSemester.programsOffered[i].branchOffered.name %>
-                </h3>
-                <table>
-                    <tr>
-                        <th>SR No</th>
-                        <th>Course name</th>
-                        <th>Course code</th>
-                        <th>Course credits</th>
-                        <th>Instructor</th>
-                    </tr>
-                    <% for (var j=0; j <populatedSemester.programsOffered[i].coursesOffered.length; j++) { %>
-                        <tr>
-                            <td>
-                                <%= j+1 %>
-                            </td>
-                            <td>
-                                <%= populatedSemester.programsOffered[i].coursesOffered[j].name %>
-                            </td>
-                            <td>
-                                <%= populatedSemester.programsOffered[i].coursesOffered[j].code %>
-                            </td>
-                            <td>
-                                <%= populatedSemester.programsOffered[i].coursesOffered[j].credits %>
-                            </td>
-                            <td>
-                                <select name="courseAssigned" id="">
-                                    <option value="Select" selected>Select</option>
+                <div class="sub-header">
+                    <h5>
+                        <%= i+1 %>
+                            <%= populatedSemester.programsOffered[i].degreeOffered.name %>
+                                <%= populatedSemester.programsOffered[i].branchOffered.name %>
+                    </h5>
+                </div>
 
-                                    <% for (var k=0; k <instructor.length; k++) { %>
-                                        
-                                        <% var w=populatedSemester.id ; %>
-                                        <% var x=populatedSemester.programsOffered[i].id ; %>
-                                        <% var y=populatedSemester.programsOffered[i].coursesOffered[j].id; %>
-                                        <% var z=instructor[k].id; %>
+                <section class="home-section">
+                    <div class="table-container">
 
-                                        <option value="<%= w + " " + x + " " + y + " " + z %>">
-                                            <%= instructor[k].fullname %>
-                                        </option>
-                                    <% } %>
+                        <ul class="table-responsive-lg">
+                            <li class="thead-dark">
+                                <div class="col col-1">SR No</div>
+                                <div class="col col-2">Course name</div>
+                                <div class="col col-3">Course code</div>
+                                <div class="col col-4">Course credits</div>
+                                <div class="col col-5">Instructor</div>
+                            </li>
 
-                                </select>
-                            </td>
-                        </tr>
-                        <% } %>
-                </table>
-                <hr>
+                            <% for (var j=0; j <populatedSemester.programsOffered[i].coursesOffered.length; j++) { %>
+
+                                <li class="table-row">
+                                    <div class="col col-1" data-label="#">
+                                        <%= j+1 %>
+                                    </div>
+                                    <div class="col col-2" data-label="Student ID">
+                                        <%= populatedSemester.programsOffered[i].coursesOffered[j].name %>
+                                    </div>
+                                    <div class="col col-3" data-label="Name">
+                                        <%= populatedSemester.programsOffered[i].coursesOffered[j].code %>
+                                    </div>
+                                    <div class="col col-4" data-label="Name">
+                                        <%= populatedSemester.programsOffered[i].coursesOffered[j].credits %>
+                                    </div>
+                                    <div class="col col-5" data-label="Name">
+                                        <select name="courseAssigned" id="">
+                                            <option value="Select" selected>Select</option>
+
+                                            <% for (var k=0; k <instructor.length; k++) { %>
+
+                                                <% var w=populatedSemester.id ; %>
+                                                    <% var x=populatedSemester.programsOffered[i].id ; %>
+                                                        <% var
+                                                            y=populatedSemester.programsOffered[i].coursesOffered[j].id;
+                                                            %>
+                                                            <% var z=instructor[k].id; %>
+
+                                                                <option value="<%= w + " " + x + " " + y + " " + z %>">
+                                                                    <%= instructor[k].fullname %>
+                                                                </option>
+                                                                <% } %>
+
+                                        </select>
+                                    </div>
+                                </li>
+                                <% } %>
+                        </ul>
+                    </div>
+                </section>
                 <% } %>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <div class="sub-header">
                     <button type="submit">Submit</button>
-    </form>
+                </div>
+                    
+        </form>
 
 </body>
 
