--- a/views/temp.ejs
+++ b/views/temp.ejs
@@ -5,74 +5,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
+    <title>Document</title>
     <link rel="stylesheet" href="/css/style.css">
-    <title>Branches</title>
 </head>
 
 <body>
-    <%- include('adminNavbar') %>
-        <div class="main-body-top">
-            <h3>Branches</h3>
+    <form action="/assignCourse" method="post">
+        <h3>Step - 2</h3>
+        <hr>
+        <h4>
+            <%= populatedSemester.name %>
+        </h4>
+            <br>
 
-            <form action="/viewBranch" method="post">
+            <% for (var i=0; i <populatedSemester.programsOffered.length; i++) { %>
+                <h3>
+                    <%= i+1 %> <%= populatedSemester.programsOffered[i].degreeOffered.name %> <%= populatedSemester.programsOffered[i].branchOffered.name %>
+                </h3>
                 <table>
                     <tr>
                         <th>SR No</th>
-                        <th>Name</th>
-                        <th>Edit</th>
-                        <th>Delete</th>
+                        <th>Course name</th>
+                        <th>Course code</th>
+                        <th>Course credits</th>
+                        <th>Instructor</th>
                     </tr>
-                    <% if (branch.length==0) {%>
+                    <% for (var j=0; j <populatedSemester.programsOffered[i].coursesOffered.length; j++) { %>
                         <tr>
-                            <td colspan="6">
-                                No branches found
+                            <td>
+                                <%= j+1 %>
+                            </td>
+                            <td>
+                                <%= populatedSemester.programsOffered[i].coursesOffered[j].name %>
+                            </td>
+                            <td>
+                                <%= populatedSemester.programsOffered[i].coursesOffered[j].code %>
+                            </td>
+                            <td>
+                                <%= populatedSemester.programsOffered[i].coursesOffered[j].credits %>
+                            </td>
+                            <td>
+                                <select name="courseAssigned" id="">
+                                    <option value="Select" selected>Select</option>
+
+                                    <% for (var k=0; k <instructor.length; k++) { %>
+                                        
+                                        <% var w=populatedSemester.id ; %>
+                                        <% var x=populatedSemester.programsOffered[i].id ; %>
+                                        <% var y=populatedSemester.programsOffered[i].coursesOffered[j].id; %>
+                                        <% var z=instructor[k].id; %>
+
+                                        <option value="<%= w + " " + x + " " + y + " " + z %>">
+                                            <%= instructor[k].fullname %>
+                                        </option>
+                                    <% } %>
+
+                                </select>
                             </td>
                         </tr>
                         <% } %>
-                            <% for (var i=0; i <branch.length; i++) { %>
-                                <tr>
-                                    <td>
-                                        <%= i+1 %>
-                                    </td>
-                                    <td>
-                                        <%= branch[i].name %>
-                                    </td>
-                                    <td>
-                                        <button type='submit' name="edit" value="<%= branch[i].id %>"><i
-                                                class='far fa-edit'></i></button>
-                                    </td>
-                                    <td>
-                                        <button type='submit' name="delete" value="<%= branch[i].id %>"
-                                            class="delete-btn"><i class='far fa-trash-alt'></i></button>
-                                    </td>
-                                </tr>
-                                <% } %>
                 </table>
-            </form>
+                <hr>
+                <% } %>
+                    <button type="submit">Submit</button>
+    </form>
 
-            <br>
-            <button onclick="window.location.href = '/addBranch'"> Add branch </button>
-        </div>
-
-
-
-        <script src="https://kit.fontawesome.com/2bdd553bc7.js" crossorigin="anonymous"></script>
-        <script>
-            let btns = document.getElementsByClassName('delete-btn');
-
-            for (i of btns) {
-                i.addEventListener('click', function () {
-                    if (!confirm("Are you sure you want to delete?")) {
-                        event.preventDefault();
-                    }
-                });
-            }
-        </script>
 </body>
 
 </html>
