--- a/views/studentNavbar.ejs
+++ b/views/studentNavbar.ejs
@@ -44,7 +44,7 @@
                     <i class='bx bx-folder-plus'></i>
                     <span class="link_name">Semester Registration</span>
                 </a>
-                <a href="/semesterRegistration">
+                <a href="/addDropStudent">
                     <i class='bx bxs-file-plus'></i>
                     <span class="link_name">Add-Drop course</span>
                 </a>
