--- a/views/adminNavbar.ejs
+++ b/views/adminNavbar.ejs
@@ -53,6 +53,10 @@
                     <i class='bx bxs-file-plus'></i>
                     <span class="link_name">Semester Management</span>
                 </a>
+                <a href="/addDropAdmin">
+                    <i class='bx bxs-file-plus'></i>
+                    <span class="link_name">Add-Drop Courses</span>
+                </a>
                 <a href="#">
                     <i class='bx bx-money-withdraw' ></i>
                     <span class="link_name">Fees Management</span>
