--- a/views/semesterResults.ejs
+++ b/views/semesterResults.ejs
@@ -19,6 +19,7 @@
     <%- include('studentNavbar') %>
     <div class="header">
         <h2>Semester Results</h2>
+        <h2><%= student.firstname %> <%= student.lastname %></h2>
     </div>
         <section class="home-section">
             <div class="table-container">
