--- a/public/css/style.css
+++ b/public/css/style.css
@@ -340,6 +340,14 @@ body {
     padding-left: 5px;
 }
 
+.logout{
+    background-color: transparent;
+    /* border: none; */
+    width: 50%;
+    border-radius:50%;
+
+}
+
 /* sidebar responsive */
 @media (max-width: 768px) {
     .menu-toggle {
