--- a/views/studentDetails.ejs
+++ b/views/studentDetails.ejs
@@ -10,7 +10,7 @@
 
 <body>
 
-    <form action="/studentDetails" method="post">
+    <form action="/studentDetails" method="post" enctype="multipart/form-data">
         <input type="text" placeholder="First Name" name="firstname" required>
         <input type="text" placeholder="Middle Name" name="middlename" required>
         <input type="text" placeholder="Last Name" name="lastname" required>
@@ -19,14 +19,14 @@
             <option value="Select" selected>Select</option>
 
             <% for (var k=0; k <program.length; k++) { %>
-                
-                <% var x=program[k].degreeOffered.name ; %>
-                <% var y=program[k].branchOffered.name ; %>
 
-                <option value="<%= program[k].id %>">
-                    <%= x + " " + y %>
-                </option>
-            <% } %>
+                <% var x=program[k].degreeOffered.name ; %>
+                    <% var y=program[k].branchOffered.name ; %>
+
+                        <option value="<%= program[k].id %>">
+                            <%= x + " " + y %>
+                        </option>
+                        <% } %>
 
         </select>
         <input type="date" placeholder="Date of Birth" name="dob" required>
@@ -42,6 +42,8 @@
         </div>
         <input type="password" name="password" placeholder="New password" required>
         <input type="password" name="repassword" placeholder="Confirm password" required>
+        <label for="picture">Select Picture:</label>
+        <input type="file" name="picture" id="picture">
         <button type="submit">Submit</button>
     </form>
 </body>
