complain box added

--- a/views/adminNavbar.ejs
+++ b/views/adminNavbar.ejs
@@ -63,7 +63,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="/viewComplains">
                     <i class='bx bx-comment-error'></i>
                     <span class="link_name">Complain-box</span>
                 </a>
