--- a/views/myComplains.ejs
+++ b/views/myComplains.ejs
@@ -27,38 +27,38 @@
             <% } else { %>
                 <section class="home-section">
                     <div class="table-container">
-                        <form action="/myComplains" method="post">
-                            <ul class="table-responsive-lg">
-                                <li class="thead-dark">
-                                    <div class="col col-1">SR No</div>
-                                    <div class="col col-2">Complain</div>
-                                    <div class="col col-3">Date complained</div>
-                                    <div class="col col-4">Status</div>
+                        <ul class="table-responsive-lg">
+                            <li class="thead-dark">
+                                <div class="col col-1">SR No</div>
+                                <div class="col col-2">Complain</div>
+                                <div class="col col-3">Date complained</div>
+                                <div class="col col-4">Status</div>
+                            </li>
+
+                            <% for (var i=0; i <complains.length; i++) { %>
+
+                                <li class="table-row">
+                                    <div class="col col-1" data-label="#">
+                                        <%= i+1 %>
+                                    </div>
+                                    <div class="col col-2" data-label="Student ID">
+                                        <%= complains[i].complain %>
+                                    </div>
+                                    <div class="col col-3" data-label="Name">
+                                        <% var options={ weekday: 'long' , year: 'numeric' , month: 'long' ,
+                                            day: 'numeric' }; %>
+                                                <%= complains[i].dateComplained.toLocaleDateString("en-US", options) %>
+                                    </div>
+                                    <div class="col col-4" data-label="Batch">
+                                        <% if ( complains[i].status ) { %>
+                                            <%= "Resolved" %>
+                                                <% } else { %>
+                                                    <%= "Pending" %>
+                                                        <% } %>
+                                    </div>
                                 </li>
-
-                                <% for (var i=0; i <complains.length; i++) { %>
-
-                                    <li class="table-row">
-                                        <div class="col col-1" data-label="#">
-                                            <%= i+1 %>
-                                        </div>
-                                        <div class="col col-2" data-label="Student ID">
-                                            <%= complains[i].complain %>
-                                        </div>
-                                        <div class="col col-5" data-label="Name">
-                                            <%= complains[i].dateComplained %>
-                                        </div>
-                                        <div class="col col-6" data-label="Batch">
-                                            <% if ( complains[i].status ) { %>
-                                                <%= "Resolved" %>
-                                                    <% } else { %>
-                                                        <%= "Pending" %>
-                                                            <% } %>
-                                        </div>
-                                    </li>
-                                    <% } %>
-                            </ul>
-                        </form>
+                                <% } %>
+                        </ul>
 
                         <br>
                     </div>
@@ -66,8 +66,9 @@
                 </section>
 
                 <% } %>
-
                 <button onclick="window.location.href = '/addComplain'"> Add Complain </button>
+
+                    
 </body>
 
 </html>
