--- a/views/instructorNavbar.ejs
+++ b/views/instructorNavbar.ejs
@@ -36,18 +36,10 @@
                 </a>
             </li>
             <li>
-                <div class="iocn-link">
-                    <a href="#">
-                        <i class='bx bx-cog' ></i>
-                        <span class="link_name">Account</span>
-                    </a>
-                    <i class='bx bxs-chevron-down arrow'></i>
-                </div>
-                <ul class="sub-menu">
-                    <!-- <li><a class="link_name" href="#">Profile</a></li> -->
-                    <li><a href="#">Account Settings</a></li>
-                    <li><a href="#">Reset Password</a></li>
-                </ul>
+                <a href="/passwordInstructor">
+                    <i class='bx bx-cog'></i>
+                    <span class="link_name">Change Password</span>
+                </a>
             </li>
 
             <li>
