--- a/views/adminNavbar.ejs
+++ b/views/adminNavbar.ejs
@@ -57,10 +57,17 @@
                     <i class='bx bxs-file-plus'></i>
                     <span class="link_name">Add-Drop Courses</span>
                 </a>
-                <a href="#">
-                    <i class='bx bx-money-withdraw' ></i>
-                    <span class="link_name">Fees Management</span>
-                </a>
+                <div class="iocn-link">
+                    <a href="#">
+                        <i class='bx bx-money-withdraw'></i>
+                        <span class="link_name">Fee Management</span>
+                    </a>
+                    <i class='bx bxs-chevron-down arrow'></i>
+                </div>
+                <ul class="sub-menu">
+                    <li><a href="/feeProgram" class="sub-list">Fee structure</a></li>
+                    <li><a href="/feeProgramPayments" class="sub-list">Fee payments</a></li>
+                </ul>
             </li>
             <li>
                 <a href="/viewComplains">
