--- a/views/viewSemester.ejs
+++ b/views/viewSemester.ejs
@@ -17,47 +17,53 @@
 
 <body>
     <%- include('adminNavbar') %>
-    <div class="header">
-        <h2>Semester Details</h2>
-    </div>
-    <section class="home-section">
-        <div class="table-container">
-            <form action="/viewSemester" method="post">
-                <ul class="table-responsive-lg">
-                    <li class="thead-dark">
-                        <div class="col col-1">SR No</div>
-                        <div class="col col-2">Name</div>
-                        <div class="col col-5">Edit</div>
-                        <div class="col col-6">Delete</div>
-                    </li>
-
-                    <% for (var i=0; i <semester.length; i++) { %>
-
-                        <li class="table-row">
-                            <div class="col col-1" data-label="#">
-                                <%= i+1 %>
-                            </div>
-                            <div class="col col-2" data-label="Student ID">
-                                <%= semester[i].name %>
-                            </div>
-                            <div class="col col-5" data-label="Name">
-                                <button type='submit' name="edit" value="<%= semester[i].id %>"><i
-                                    class='far fa-edit'></i></button>
-                            </div>
-                            <div class="col col-6" data-label="Batch">
-                                <button type='submit' name="delete" value="<%= semester[i].id %>"
-                                    class="delete-btn"><i class='far fa-trash-alt'></i></button>
-                            </div>
-                        </li>
-                    <% } %>
-                </ul>
-            </form>
-
-            <br>
-            <button onclick="window.location.href = '/addSemester'"> Add Semester </button>
+        <div class="header">
+            <h2>Semester Details</h2>
         </div>
+        <section class="home-section">
+            <div class="table-container">
+                <form action="/viewSemester" method="post">
+                    <ul class="table-responsive-lg">
+                        <li class="thead-dark">
+                            <div class="col col-1">SR No</div>
+                            <div class="col col-2">Name</div>
+                            <div class="col col-3">Date created</div>
+                            <div class="col col-5">Edit</div>
+                            <div class="col col-6">Delete</div>
+                        </li>
 
-    </section>
+                        <% for (var i=0; i <semester.length; i++) { %>
+
+                            <li class="table-row">
+                                <div class="col col-1" data-label="#">
+                                    <%= i+1 %>
+                                </div>
+                                <div class="col col-2" data-label="Student ID">
+                                    <%= semester[i].name %>
+                                </div>
+                                <div class="col col-3" data-label="Student ID">
+                                    <% var options={ weekday: 'long' , year: 'numeric' , month: 'long' , day: 'numeric'
+                                        }; %>
+                                                <%= semester[i].dateCreated.toLocaleDateString("en-US", options) %>
+                                </div>
+                                <div class="col col-5" data-label="Name">
+                                    <button type='submit' name="edit" value="<%= semester[i].id %>"><i
+                                            class='far fa-edit'></i></button>
+                                </div>
+                                <div class="col col-6" data-label="Batch">
+                                    <button type='submit' name="delete" value="<%= semester[i].id %>"
+                                        class="delete-btn"><i class='far fa-trash-alt'></i></button>
+                                </div>
+                            </li>
+                            <% } %>
+                    </ul>
+                </form>
+
+                <br>
+                <button onclick="window.location.href = '/addSemester'"> Add Semester </button>
+            </div>
+
+        </section>
 
 
         <script src="https://kit.fontawesome.com/2bdd553bc7.js" crossorigin="anonymous"></script>
