shifted from gmail to outlook

--- a/views/addFee.ejs
+++ b/views/addFee.ejs
@@ -10,7 +10,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Add Course</title>
+    <title>Fee Structure</title>
 </head>
 <body>
     <%- include('adminNavbar') %>
