--- a/views/adminNavbar.ejs
+++ b/views/adminNavbar.ejs
@@ -66,7 +66,7 @@
                 </div>
                 <ul class="sub-menu">
                     <li><a href="/feeProgram" class="sub-list">Fee structure</a></li>
-                    <li><a href="/feeProgramPayments" class="sub-list">Fee payments</a></li>
+                    <li><a href="/feeSemesterPayments" class="sub-list">Fee payments</a></li>
                 </ul>
             </li>
             <li>
