--- a/views/studentNavbar.ejs
+++ b/views/studentNavbar.ejs
@@ -31,7 +31,7 @@
             </li>
 
             <li>
-                <a href="/studentHome" class="attedance-logo">
+                <a href="/semesterFee" class="attedance-logo">
                     <i class='bx bx-money-withdraw'></i>
                     <span class="link_name">Fees</span>
                 </a>
