--- a/views/feeStudentPayments.ejs
+++ b/views/feeStudentPayments.ejs
@@ -56,12 +56,12 @@
 
                                             <% if (history[j].studentEnrolled.id==enrollments[i].toString() && history[j].feeStatus==true) { %>
                                                 <% x=1 %>
-                                                <button type="submit" name="view" value="<%=enrollments[i].toString() + " " + semesterID%>"> View</button>
+                                                <button style="background-color: green;" type="submit" name="view" value="<%=enrollments[i].toString() + " " + semesterID%>"> View</button>
                                                 <% break; %>
                                             <% } %>
                                         <% } %>
                                         <% if (x==0) { %>
-                                            <button type="submit" name="add" value="<%=enrollments[i].toString() + " " + semesterID + " " + programID %>">Add</button> 
+                                            <button style="background-color: red;" type="submit" name="add" value="<%=enrollments[i].toString() + " " + semesterID + " " + programID %>">Add</button> 
                                         <% } %>
                                     </div>
                                 </li>
