admin home updated & studentRegistration page added

--- a/views/adminhome.ejs
+++ b/views/adminhome.ejs
@@ -10,7 +10,7 @@
 
    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="style/style.css">
+   <link rel="stylesheet" href="style/admin_adminsidebar.css">
    <title>Admin-dashboard</title>
 </head>
 
@@ -127,7 +127,7 @@
       </ul>
    </div>
 <!-- main body section -->
-   <div class="main-body">
+   <div class="home-section">
       <h1>Welcome to DAIICT E-campus</h1>
       <h1>
          <%=greet%>
