--- a/views/viewDegree.ejs
+++ b/views/viewDegree.ejs
@@ -60,14 +60,27 @@
 
 
         <script src="https://kit.fontawesome.com/2bdd553bc7.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script>
             let btns = document.getElementsByClassName('delete-btn');
 
             for (i of btns) {
                 i.addEventListener('click', function () {
-                    if (!confirm("Are you sure you want to delete?")) {
-                        event.preventDefault();
-                    }
+                    
+                    Swal.fire({
+                        title: 'Are you sure?',
+                        text: "You won't be able to revert this!",
+                        icon: 'warning',
+                        showCancelButton: true,
+                        confirmButtonColor: '#3085d6',
+                        cancelButtonColor: '#d33',
+                        confirmButtonText: 'Yes, delete it!'
+                    }).then((result) => {
+                        if (!result.isConfirmed) {
+        
+                            event.preventDefault();
+                        }
+                    })
                 });
             }
         </script>
