--- a/views/viewSemester.ejs
+++ b/views/viewSemester.ejs
@@ -67,6 +67,7 @@
 
 
         <script src="https://kit.fontawesome.com/2bdd553bc7.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script>
             let btns = document.getElementsByClassName('delete-btn');
 
